<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mitkonsultan.myapplication.MainActivity">
    <item
        android:id="@+id/jadwal_lengkap"
        android:orderInCategory="100"
        android:title="@string/jadwal_lengkap"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/qa"
        android:orderInCategory="102"
        android:title="@string/qa"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:orderInCategory="103"
        android:title="@string/global"
        app:showAsAction="never" />
</menu>
