<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->



    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pm" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/tentang"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/develope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/develope"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/develope"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/copyright"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/website"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/support"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textView6"
                android:layout_marginRight="100dp"
                android:layout_marginTop="17dp"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView6"
                android:layout_marginLeft="100dp"
                android:src="@drawable/info" />


        </RelativeLayout></ScrollView>
    </android.support.v7.widget.CardView>



